# tracematch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: benchmark.yml  ci.yml  pages.yml  release.yml
bench/: sion_wasm.mjs
benches/: grouping_incremental.rs  iai_benchmarks.rs  lifecycle_scenarios.rs  route_benchmarks.rs  route_matching.rs  section_detection.rs  stress.rs
examples/: basic_matching.rs  batch_grouping.rs  bench_chaos.rs  bench_grid_filtering.rs  bench_incremental.rs  bench_no_overlap.rs  bench_overlap_density.rs  bench_parallel_scaling.rs  bench_route_length.rs  bench_scaling_multiscale.rs  bench_scaling_optimized.rs  bench_scenarios.rs  corpus_report.rs  density_grid_report.rs  route_grouping.rs  route_matching.rs  scaling_report.rs  sion_corpus_report.rs  spatial_filter_bench.rs
examples/common/: corpus.rs  mod.rs
scripts/: build-android-dev.sh  build-android.sh  build-ios.sh  install-android.sh  install-ios.sh  pre-commit  setup-hooks.sh
src/: achievements.rs  algorithms.rs  curves.rs  engine.rs  engine_legacy.rs  error.rs  ffi.rs  geo_utils.rs  grouping.rs  grouping_filter.rs  heatmap.rs  http.rs  lib.rs  matching.rs  persistence.rs  synthetic.rs  union_find.rs  zones.rs
src/engine/: activity_store.rs  mod.rs  route_grouper.rs  signature_cache.rs  signature_store.rs  spatial_index.rs
src/scenarios/: lifecycle.rs  mod.rs  noise.rs
src/sections/: consensus.rs  corridor.rs  density_grid.rs  evolution.rs  flow_graph.rs  incremental.rs  medoid.rs  mod.rs  optimized.rs  overlap.rs  portions.rs  postprocess.rs  progress.rs  rtree.rs  spatial_filter.rs  traces.rs
tests/: activity_store_test.rs  engine.rs  error.rs  ffi_integration.rs  geo_utils.rs  grouping.rs  grouping_sion_corpus.rs  heatmap.rs  lib.rs  matching.rs  mod_test.rs  optimization_efficiency.rs  route_grouper_test.rs  section_detection.rs  section_manipulation.rs  sections.rs  signature_store_test.rs  spatial_index_test.rs  union_find.rs
tests/fixtures/: raw_traces
tests/fixtures/demo/: LICENSE
tests/fixtures/raw_traces/: .gitignore
tracematch-python/: Cargo.toml  pyproject.toml
tracematch-python/src/: lib.rs
tracematch-python/tests/: test_matching.py
tracematch-wasm/: Cargo.toml
tracematch-wasm/src/: lib.rs
web/: .gitignore  package-lock.json  package.json  vite.config.ts
web/src/: app.d.ts
web/src/lib/components/: MethodIllustration.svelte
web/src/lib/parsers/: gpx.ts
web/src/lib/stores/: traces.svelte.ts
web/src/lib/wasm/: engine.ts  sectionWorker.ts  types.ts
web/src/routes/: +layout.svelte  +page.svelte
web/static/: CNAME
