[package]
name = "tracematch"
version = "0.0.8"
edition = "2024"
authors = ["Evan Thomas <evan@evanjt.com>"]
license = "Apache-2.0"
description = "High-performance GPS route matching and activity analysis"
repository = "https://github.com/evanjt/route-matcher"
readme = "README.md"
keywords = ["gps", "route", "matching", "geospatial", "fitness"]
categories = ["algorithms", "science::geo"]
publish = true

[lib]
name = "tracematch"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["ffi", "parallel", "http", "persistence"]
ffi = ["uniffi", "parallel"]
parallel = ["rayon"]
http = ["reqwest", "tokio", "futures", "base64"]
persistence = ["rusqlite", "rmp-serde"]
cli = ["gpx", "clap", "env_logger", "chrono", "parallel"]

[dependencies]
geo = "0.29"
rstar = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
lru = "0.12"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rmp-serde = { version = "1.1", optional = true }
rayon = { version = "1.10", optional = true }
uniffi = { version = "0.29", features = ["cli"], optional = true }
# HTTP client for activity fetching (optional)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
futures = { version = "0.3", optional = true }
base64 = { version = "0.22", optional = true }
# CLI dependencies
gpx = { version = "0.10", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
chrono = { version = "0.4", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
iai-callgrind = "0.14"

[[bench]]
name = "section_detection"
harness = false

[[bench]]
name = "iai_benchmarks"
harness = false

[build-dependencies]
uniffi = { version = "0.29", features = ["build"], optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = false

[profile.release-mobile]
inherits = "release"
panic = "abort"

[[example]]
name = "basic_matching"
path = "examples/basic_matching.rs"

# [[example]]
# name = "batch_grouping"
# path = "examples/batch_grouping.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "tracematch-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]
