[package]
name = "tracematch"
version = "0.1.0"
edition = "2024"
authors = ["Evan Thomas <evan@evanjt.com>"]
license = "Apache-2.0"
description = "High-performance GPS route matching and activity analysis algorithms"
repository = "https://github.com/evanjt/tracematch"
readme = "README.md"
keywords = ["gps", "route", "matching", "geospatial", "fitness"]
categories = ["algorithms", "science::geo"]
publish = true
exclude = ["tests/fixtures/raw_traces"]

[lib]
name = "tracematch"
crate-type = ["rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
geo = "0.29"
rstar = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
lru = "0.12"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
iai-callgrind = "0.14"

[[bench]]
name = "section_detection"
harness = false

[[bench]]
name = "iai_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = false

[profile.release-mobile]
inherits = "release"
panic = "abort"

[[example]]
name = "basic_matching"
path = "examples/basic_matching.rs"
