[package]
name = "tracematch"
version = "0.1.0"
edition = "2024"
authors = ["Evan Thomas <evan@evanjt.com>"]
license = "Apache-2.0"
description = "High-performance GPS route matching and activity analysis algorithms"
repository = "https://github.com/evanjt/tracematch"
readme = "README.md"
keywords = ["gps", "route", "matching", "geospatial", "fitness"]
categories = ["algorithms", "science::geo"]
publish = true
exclude = ["tests/fixtures/raw_traces"]

[lib]
name = "tracematch"
crate-type = ["rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]
synthetic = ["rand"]

[dependencies]
geo = "0.29"
rstar = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = { version = "1.10", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.14"
rand = "0.8"

[[bench]]
name = "route_matching"
harness = false

[[bench]]
name = "section_detection"
harness = false

[[bench]]
name = "iai_benchmarks"
harness = false

[[bench]]
name = "stress"
harness = false
required-features = ["synthetic"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = false

[profile.release-mobile]
inherits = "release"
panic = "abort"

[[example]]
name = "route_matching"
path = "examples/route_matching.rs"

[[example]]
name = "route_grouping"
path = "examples/route_grouping.rs"

[[example]]
name = "scaling_report"
path = "examples/scaling_report.rs"
required-features = ["synthetic"]

[[example]]
name = "bench_parallel_scaling"
path = "examples/bench_parallel_scaling.rs"
required-features = ["synthetic"]
