[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "tracematch"
version = "0.2.2"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: GIS",
]
description = "High-performance GPS route matching and section detection"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tracematch"
