[package]
name = "tracematch-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracematch = { path = "..", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-rayon = { version = "1.3", optional = true }

[features]
default = []
parallel = ["tracematch/parallel", "wasm-bindgen-rayon"]
